--- a/templates/index.html
+++ b/templates/index.html
@@ -70,10 +70,10 @@
             </h2>
             <span class="text-xs text-gray-400">FPS: 30</span>
           </div>
-          <div class="aspect-w-16 aspect-h-9 bg-black relative">
+          <div class="bg-black w-full aspect-video">
             <img
               src="/video_feed"
-              class="w-full h-full object-contain"
+              class="w-full h-full object-contain block"
               alt="Video Feed"
             />
           </div>
